<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:contentDescription="@string/formular">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="16dp"
        android:textSize="36dp"
        android:textStyle="bold"
        android:text="@string/eingabeformular" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:inputType="textPersonName"
        android:textSize="18dp"
        android:hint="Nickname" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:inputType="textEmailAddress"
        android:textSize="18dp"
        android:hint="Email" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:inputType="phone"
        android:textSize="18dp"
        android:hint="Telefonnummer" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:inputType="date"
        android:textSize="18dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="Geburtsdatum" />

    <!--<CalendarView-->
        <!--android:id="@+id/calendarView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <Button
        android:id="@+id/buttonSaveBack"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonSave" />

</LinearLayout>