<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/list"
    android:orientation="vertical">

    <Button
        android:id="@+id/addToList"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="7dp"
        android:onClick="AddItem"
        android:text="@string/addButtonList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addElement"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/deleteFromList"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:onClick="DeleteItem"
        android:text="@string/deleteButtonList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addElement"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/deleteAllFromList"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginRight="7dp"
        android:onClick="DeleteAllItem"
        android:text="Delete all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.999"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addElement"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/addElement"
        android:layout_width="300dp"
        android:layout_height="84dp"
        android:hint="Add an element"
        android:inputType="text"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />
    <!--android:imeOptions="actionSearch"-->


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteFromList"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>